saves/test/demo_full_20240802_193545/lfsr32/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp lfsr32_tb.v lfsr32.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
lfsr32_tb.v:123: $finish called at 2540000 (1ps)

iverilog cmd 2 error:

